syntax = "proto3";

package pb;

import "api/proto/common_service.proto";
import "google/protobuf/timestamp.proto";
import "api/proto/google/api/annotations.proto";

option go_package = "api/proto";

message GetTrackingDetailsRequest {
    string order_item_id = 1;
}

message GetTrackingDetailsResponse{
    int32 code = 1;
    bool status = 2;
    string message = 3;
    TrackingDetailsResponse data = 4;
}

message TrackingDetailsResponse {
    int32 status = 1;
    repeated TrackingItemsResponse details = 2;
    
}

message TrackingItemsResponse {
    string title = 2;
    string summary = 3;
    google.protobuf.Timestamp time = 4;
}

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (Response);
    rpc GetUserOrders (GetOrdersRequest) returns (GetOrderResponse);
    rpc GetMerchantOrders (GetOrdersRequest) returns (GetOrderResponse);
    rpc UpdateOrderStatus (UpdateOrderRequest) returns (Response);

    rpc GetOrderTrackingDetails (GetTrackingDetailsRequest) returns (GetTrackingDetailsResponse){
        option (google.api.http) = {
            get: "/order/tacking-details/{order_item_id}"
        };
    }
}
